Superword optimization fails with assert(0 <= i && i < _len) failed: illegal index

XMLWordPrintable

    • b24
    • 12
    • b28
    • x86
    • Verified

        compiler/loopopts/superword/Vec_MulAddS2I.java which was added by JDK-8214751 fails with:

        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1353/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d26c32e8-05d9-4787-b754-e5456974cf17/runs/73c1981f-1250-4aba-82b4-db71d0fede8c/workspace/open/src/hotspot/share/utilities/growableArray.hpp:240), pid=22071, tid=22084
        # assert(0 <= i && i < _len) failed: illegal index

        Current CompileTask:
        C2: 254 16 % 4 compiler.loopopts.superword.Vec_MulAddS2I::Vec_MulAddS2IImplement @ 2 (70 bytes)

        Stack: [0x00007fb4d9bfc000,0x00007fb4d9cfd000], sp=0x00007fb4d9cf6750, free space=1001k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x16f337f] GrowableArray<int>::at(int) [clone .isra.226]+0x1f
        V [libjvm.so+0x170f0dd] SuperWord::bb_idx(Node*)+0x6d
        V [libjvm.so+0x170f433] SuperWord::my_pack(Node*)+0x53
        V [libjvm.so+0x16f7a2a] SuperWord::vector_opd(Node_List*, int)+0x23a
        V [libjvm.so+0x17072e8] SuperWord::output()+0x2f8
        V [libjvm.so+0x170e688] SuperWord::SLP_extract()+0x2d8
        V [libjvm.so+0x170ed63] SuperWord::transform_loop(IdealLoopTree*, bool)+0x463
        V [libjvm.so+0x125deba] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x11fa
        V [libjvm.so+0x9fe9f2] Compile::optimize_loops(PhaseIterGVN&, LoopOptsMode) [clone .part.412]+0x2c2
        V [libjvm.so+0xa01d41] Compile::Optimize()+0xc21
        V [libjvm.so+0xa02dbc] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd6c
        V [libjvm.so+0x8044e1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
        V [libjvm.so+0xa0ffc9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x409
        V [libjvm.so+0xa110e8] CompileBroker::compiler_thread_loop()+0x458
        V [libjvm.so+0x17b06c7] JavaThread::thread_main_inner()+0x2c7
        V [libjvm.so+0x17b099c] JavaThread::run()+0x1cc
        V [libjvm.so+0x17ac605] Thread::call_run()+0x75
        V [libjvm.so+0x1497376] thread_native_entry(Thread*)+0x106

              Assignee:
              Vivek Deshpande (Inactive)
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: