8216050: Superword optimization fails with assert(0 <= i && i < _len) failed: illegal index

Fix for the crash by matching the operands by swapping to right positions.

Reviewed-by: thartmann, kvn